traefik/Service-traefik.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/hostname: k8s-ingress
    tailscale.com/tags: tag:web
  labels:
    app.kubernetes.io/instance: traefik-traefik
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: traefik
  name: traefik
  namespace: traefik
spec:
  loadBalancerClass: tailscale
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: web
    - name: websecure
      port: 443
      protocol: TCP
      targetPort: websecure
  selector:
    app.kubernetes.io/instance: traefik-traefik
    app.kubernetes.io/name: traefik
  type: LoadBalancer
